syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/timers";
package messages.timers;

message Timer {
	message Response {
		string id = 1;
		string text = 2;
		bool is_announce = 3;
		string timer_id = 4;
	}

	string id = 1;
	string channel_id = 2;
	string name = 3;
	bool enabled = 4;
	int32 time_interval = 5;
	int32 message_interval = 6;
	int32 last_trigger_message_number = 7;
	repeated Response responses = 8;
}

message GetResponse {
	repeated Timer timers = 1;
}

message CreateData {
	message Response {
		string text = 2;
		bool is_announce = 3;
	}

	string name = 1;
	bool enabled = 2;
	int32 time_interval = 3;
	int32 message_interval = 4;
	repeated Response responses = 5;
}

message UpdateRequest {
	string id = 1;
	CreateData timer = 2;
}

message DeleteRequest {
	string id = 1;
}

message CreateRequest {
	CreateData data = 1;
}

message PatchRequest {
	string id = 1;
	bool enabled = 2;
}
